# instrumentality

./: .gitignore  .rustfmt.toml  COVERAGE.md  Cargo.toml  InstrumentalityExample.toml  InstrumentalityTestExample.toml  README.md
.github/workflows/: build.yml  run.yml  test.yml
src/: boot.rs  config.rs  data.rs  database.rs  lib.rs  main.rs  response.rs  server.rs  user.rs
src/concepts/: data.rs  group.rs  mod.rs  subject.rs  user.rs
src/routes/: add.rs  create.rs  default.rs  delete.rs  frontpage.rs  halt.rs  invite.rs  login.rs  mod.rs  queue.rs  register.rs  reset.rs  response.rs  types.rs  update.rs  view.rs
src/routes/groups/: create.rs  delete.rs  mod.rs  update.rs
src/routes/subjects/: create.rs  delete.rs  mod.rs  update.rs
src/routes/user/: from_request_parts.rs  login.rs  mod.rs  reset.rs
src/routes/users/: invite.rs  mod.rs  register.rs
src/utils/: deserialise_array.rs  mod.rs  random.rs
tests/: common.rs  integration_add.rs  integration_default.rs  integration_frontpage.rs  integration_groups.rs  integration_halt.rs  integration_invite.rs  integration_login.rs  integration_misc.rs  integration_queue.rs  integration_register.rs  integration_reset.rs  integration_subject.rs  integration_types.rs  integration_view.rs
