[package]
name = "instrumentality"
version = "0.2.5"
edition = "2021"
description = "A data aggregation platform."
authors = ["James <james \"at\" berserksystems.com>"]
readme = "README.md"
license = "AGPL-3.0"
repository = "https://github.com/berserksystems/instrumentality/"
exclude = ["assets/", ".github/"]

[[bin]]
name = "instrumentality"

[lib]
name = "instrumentality"
path = "src/lib.rs"

[dependencies]
axum = "0.6"
axum-server = { version = "0.4", features = ["tls-rustls"] }
tower = { version = "0.4", features = ["timeout"] }
tower-http = { version = "0.3", features = ["set-header"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = "1.24"
tokio-stream = "0.1"
futures-util = "0.3"
mongodb = "2.3"
toml = "0.5"
chrono = { version = "0.4", default_features = false, features = ["serde"] }
serde = "1.0"
getrandom = "0.2"
uuid = { version = "1.2", features = ["v4"] }
sha2 = "0.10"

[dev-dependencies]
regex = "1.7.0"
hyper = { version = "0.14.23", features = ["client"] }
serde_json = "1.0.91"
mime = "0.3.16"
